[package]
name = "legacy_token_decode_module"
version = "0.0.0"
authors = ["contact@dharitri.org"]
edition = "2018"

[lib]
path = "src/lib.rs"

[dependencies.dharitri-sc]
version = "1.0.1"
features = ["dcdt-token-payment-legacy-decode"]

[dependencies.common_structs]
path = "../../common_structs"

[dependencies.utils]
path = "../utils"
