[package]
name = "permissions_module"
version = "0.0.0"
authors = ["contact@dharitri.org"]
edition = "2021"

[lib]
path = "src/permissions_module.rs"

[dependencies]
bitflags = "2.4.1"

[dependencies.common_errors]
path = "../../common_errors"

[dependencies.dharitri-sc]
version = "1.0.1"
features = ["dcdt-token-payment-legacy-decode"]
