[package]
name = "utils"
version = "0.0.0"
authors = ["contact@dharitri.org"]
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies.dharitri-sc]
version = "1.0.1"
features = ["dcdt-token-payment-legacy-decode"]

[dependencies.common_structs]
path = "../../common_structs"

[dependencies.fixed-supply-token]
path = "../../traits/fixed-supply-token"

[dependencies.mergeable]
path = "../../traits/mergeable"
