[package]
name = "events"
version = "0.0.0"
authors = ["contact@dharitri.org"]
edition = "2021"

[lib]
path = "src/events.rs"

[dependencies.common_structs]
path = "../../../common_structs"

[dependencies.contexts]
path = "../contexts"

[dependencies.dharitri-sc]
version = "1.0.1"
features = ["dcdt-token-payment-legacy-decode"]
